devops/kubernetes/platform-core/overlays/gcp/provider-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-core
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
