devops/kubernetes/platform-core/overlays/gcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-core
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: platform-core-managed-cert
spec:
  ingressClassName: gce
  rules:
    - host: platform-core.country.example.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-core
                port:
                  number: 80
  tls:
    - hosts:
        - platform-core.country.example.edu
      secretName: platform-core-tls
